[gd_scene load_steps=11 format=2]

[ext_resource path="res://client/components/gameplay/terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/components/sevivon/sevivon.tscn" type="PackedScene" id=2]
[ext_resource path="res://client/match/client_match.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/NotoSansUI.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://client/components/sevivon/spin/gimmel.tres" type="Animation" id=5]
[ext_resource path="res://client/components/sevivon/spin/hey.tres" type="Animation" id=6]
[ext_resource path="res://client/components/sevivon/spin/shin.tres" type="Animation" id=7]
[ext_resource path="res://client/components/sevivon/spin/nun.tres" type="Animation" id=8]
[ext_resource path="res://client/components/nameplate/nameplate.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[node name="Match" type="Spatial"]
script = ExtResource( 3 )

[node name="Sevivon" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.811954, 0 )

[node name="Floor" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 3, 8 )
fov = 75.0

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gelt" parent="UI" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -180.0
margin_top = 72.0
margin_right = 180.0
margin_bottom = 216.0

[node name="TopLeft" parent="UI" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -360.0
margin_top = -360.0
margin_right = 0.0
margin_bottom = -216.0

[node name="TopCenter" parent="UI" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -180.0
margin_top = -360.0
margin_right = 180.0
margin_bottom = -216.0

[node name="TopRight" parent="UI" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_top = -360.0
margin_right = 360.0
margin_bottom = -216.0

[node name="BottomLeft" parent="UI" instance=ExtResource( 9 )]
anchor_top = 1.0
anchor_right = 0.0
margin_top = -216.0
margin_right = 360.0
margin_bottom = -72.0

[node name="BottomCenter" parent="UI" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -180.0
margin_top = -216.0
margin_right = 180.0
margin_bottom = -72.0

[node name="BottomRight" parent="UI" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -360.0
margin_top = -216.0
margin_right = 0.0
margin_bottom = -72.0

[node name="SpinPopup" type="PopupPanel" parent="UI"]
margin_right = 8.0
margin_bottom = 8.0

[node name="Result" type="Label" parent="UI/SpinPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 226.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "Testing"
align = 1
valign = 1

[node name="Spin" type="AnimationPlayer" parent="."]
anims/gimmel = ExtResource( 5 )
anims/hey = ExtResource( 6 )
anims/nun = ExtResource( 8 )
anims/shin = ExtResource( 7 )
